--- a/frontend/src/app/features/product-card/product-card.html
+++ b/frontend/src/app/features/product-card/product-card.html
@@ -10,11 +10,14 @@
   <mat-card-content>
     <div class="price-section">
       <p class="price-tag">{{ product.price | currency:'EUR' }}</p>
-      @if (offerInfo) {
-        <p class="offer-info">
-          <mat-icon>local_offer</mat-icon> {{ offerInfo }}
-        </p>
-      }
+
+      <div class="offer-container">
+        @if (offerInfo) {
+          <p class="offer-info">
+            <mat-icon>local_offer</mat-icon> {{ offerInfo }}
+          </p>
+        }
+      </div>
     </div>
 
     <mat-form-field appearance="outline" class="w-full mt-4">
