--- a/frontend/src/app/features/cart-dialog/cart-dialog.html
+++ b/frontend/src/app/features/cart-dialog/cart-dialog.html
@@ -23,7 +23,7 @@
           </div>
 
           <div matListItemMeta class="quantity-controls">
-            <button mat-icon-button color="warn" (click)="cartState.updateQuantity(item.id, -1)">
+            <button mat-icon-button (click)="cartState.updateQuantity(item.id, -1)">
               <mat-icon>remove_circle_outline</mat-icon>
             </button>
 
@@ -36,6 +36,10 @@
             <span class="item-total">
               {{ CartCalculator.calculateItemSubtotal(item, offerState.offers()) | currency:'EUR' }}
             </span>
+
+            <button mat-icon-button color="warn" class="delete-button" (click)="cartState.removeFromCart(item.id)" aria-label="Remove item from cart">
+              <mat-icon>delete_forever</mat-icon>
+            </button>
           </div>
         </mat-list-item>
       }
